[gd_scene load_steps=5 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_main"]
[ext_resource type="Script" path="res://scripts/building.gd" id="2_building"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="3_ui"]
[ext_resource type="Script" path="res://scripts/game_camera.gd" id="4_camera"]

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
script = ExtResource("4_camera")

[node name="Building" type="Node2D" parent="."]
script = ExtResource("2_building")

[node name="Floors" type="Node2D" parent="Building"]

[node name="Elevators" type="Node2D" parent="Building"]

[node name="People" type="Node2D" parent="Building"]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("3_ui")

[node name="TopBar" type="HBoxContainer" parent="UI"]
offset_right = 1280.0
offset_bottom = 40.0

[node name="MoneyLabel" type="Label" parent="UI/TopBar"]
layout_mode = 2
text = "$100,000,000"

[node name="PopulationLabel" type="Label" parent="UI/TopBar"]
layout_mode = 2
text = "Population: 0"

[node name="TimeLabel" type="Label" parent="UI/TopBar"]
layout_mode = 2
text = "Day 1 - 6:00 AM"

[node name="SatisfactionLabel" type="Label" parent="UI/TopBar"]
layout_mode = 2
text = "Satisfaction: 100%"

[node name="StarLabel" type="Label" parent="UI/TopBar"]
layout_mode = 2
text = "[*....] -> 1,000 (0%)"

[node name="VIPButton" type="Button" parent="UI/TopBar"]
layout_mode = 2
text = "VIP Visit"

[node name="ScrollContainer" type="ScrollContainer" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -700.0
offset_right = 240.0
offset_bottom = -10.0

[node name="BuildPanel" type="VBoxContainer" parent="UI/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BuildLabel" type="Label" parent="UI/ScrollContainer/BuildPanel"]
layout_mode = 2
text = "=== 1-STAR ==="

[node name="FloorButton" type="Button" parent="UI/ScrollContainer/BuildPanel"]
layout_mode = 2
text = "Floor ($5,000)"

[node name="ElevatorButton" type="Button" parent="UI/ScrollContainer/BuildPanel"]
layout_mode = 2
text = "Elevator ($20,000)"

[node name="OfficeButton" type="Button" parent="UI/ScrollContainer/BuildPanel"]
layout_mode = 2
text = "Office ($10k) +6 workers"

[node name="ApartmentButton" type="Button" parent="UI/ScrollContainer/BuildPanel"]
layout_mode = 2
text = "Apartment ($15k) +4 residents"

[node name="CoworkingButton" type="Button" parent="UI/ScrollContainer/BuildPanel"]
layout_mode = 2
text = "Coworking ($8k) +10 workers"

[node name="FoodCourtButton" type="Button" parent="UI/ScrollContainer/BuildPanel"]
layout_mode = 2
text = "Food Court ($12k) Lobby/F1"

[node name="Star2Label" type="Label" parent="UI/ScrollContainer/BuildPanel"]
layout_mode = 2
text = "=== 2-STAR ==="

[node name="HotelButton" type="Button" parent="UI/ScrollContainer/BuildPanel"]
layout_mode = 2
text = "Hotel (Locked: 2 stars)"

[node name="CondoButton" type="Button" parent="UI/ScrollContainer/BuildPanel"]
layout_mode = 2
text = "Condo (Locked: 2 stars)"

[node name="SecurityButton" type="Button" parent="UI/ScrollContainer/BuildPanel"]
layout_mode = 2
text = "Security (Locked: 2 stars)"

[node name="HousekeepingButton" type="Button" parent="UI/ScrollContainer/BuildPanel"]
layout_mode = 2
text = "Housekeeping (Locked: 2 stars)"

[node name="DaycareButton" type="Button" parent="UI/ScrollContainer/BuildPanel"]
layout_mode = 2
text = "Daycare (Locked: 2 stars)"

[node name="ServiceElevatorButton" type="Button" parent="UI/ScrollContainer/BuildPanel"]
layout_mode = 2
text = "Service Elev (Locked: 2 stars)"

[node name="UtilLabel" type="Label" parent="UI/ScrollContainer/BuildPanel"]
layout_mode = 2
text = "=== TOOLS ==="

[node name="DemolishButton" type="Button" parent="UI/ScrollContainer/BuildPanel"]
layout_mode = 2
text = "DEMOLISH (50% refund)"

[node name="SpawnButton" type="Button" parent="UI/ScrollContainer/BuildPanel"]
layout_mode = 2
text = "Spawn Person"

[node name="RentPopup" type="Panel" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -80.0
offset_right = 150.0
offset_bottom = 80.0

[node name="RentLabel" type="Label" parent="UI/RentPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
horizontal_alignment = 1
vertical_alignment = 1
